--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.css";
+h1 {
+    padding-left: 400px;
+}
+.lead{
+    padding-left: 400px;
+
+}
