--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -4,7 +4,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a routerLink="/" class="nav-link px-2 text-white">Home</a></li>
-                <li><a routerLink="/shoping-cart" class="nav-link px-2 text-white">Arti</a></li>
+                <li><a routerLink="/shoping-cart" class="nav-link px-2 text-white">Articles</a></li>
                 <li><a routerLink="/about" class="nav-link px-2 text-white">About</a></li>
                 <li ngbDropdown class="nav-item dropdown">
                     <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Username</a>
@@ -22,8 +22,8 @@
             </form>
 
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+                <button routerLink="/login" type="button" class="btn btn-outline-light me-2">Login</button>
+                <button routerLink="/register" type="button" class="btn btn-warning">Sign-up</button>
             </div>
         </div>
     </div>
