--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,70 @@
-<p>home works!</p>
+<div class="art">
+    <h1>Welcome to Free Fitness-Shop</h1>
+</div>
+<div class="trw">
+    <div class="container">
+        <div class="row space-top">
+            <div class="col-md-12">
+                <h1>Last added articles:</h1>
+            </div>
+        </div>
+        <div class="row space-top">
+            <div class="col-md-4">
+                <div class="card text-white bg-primary">
+                    <div class="card-body">
+                        <img src="/images/table.png" />
+                        <p>Description here</p>
+                        <footer>
+                            <p>Price: <span>235 $</span></p>
+                        </footer>
+                        <div>
+                            <a href=”#” class="btn btn-info">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-white bg-primary">
+                    <div class="card-body">
+                        <img src="/images/sofa.jpg" />
+                        <p>Description here</p>
+                        <footer>
+                            <p>Price: <span>1200 $</span></p>
+                        </footer>
+                        <div>
+                            <a href=”#” class="btn btn-info">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-white bg-primary">
+                    <div class="card-body">
+                        <img src="/images/chair.jpg" />
+                        <p>Description here</p>
+                        <footer>
+                            <p>Price: <span>55 $</span></p>
+                        </footer>
+                        <div>
+                            <a href=”#” class="btn btn-info">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-white bg-primary">
+                    <div class="card-body">
+                        <img src="/images/chair.jpg" />
+                        <p>Description here</p>
+                        <footer>
+                            <p>Price: <span>55 $</span></p>
+                        </footer>
+                        <div>
+                            <a href=”#” class="btn btn-info">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
